# template

./: AUTHORS  ChangeLog  README.md  setup.cfg  setup.py
etc/oslo-config-generator/: template.conf
etc/template/: template.conf.sample
template/: opts.py  service.py
template/api/: api-paste.ini  app.py  hooks.py
template/api/auth/: _request.py  oauth.py  tauth.py
template/api/controller/: ocloud_controller.py  tcloud_controller.py
template/cli/: processor.py
template/common/: utils.py
template/db/: model.py
template/drivers/: __init__.py  redis.py  zk.py
template/exceptions/: tmp_except.py
