[metadata]
name = template
author = zhangwen
author-email = zhangwen1@unionpay.com
summary = Provide template for Pythoner
description-file = README.md
license = Apache-2
home-page = https://x.x.x.x
classifier = 
    Environment :: Production
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Topic :: System :: Monitor

[options]
packages = 
    template

include_package_data=True

install_requires =
    oslo.config>=3.22.0
    oslo.middleware>=3.22.0
    oslo.log
    oslo.db
    Paste
    PasteDeploy
    pecan>=0.9
    requests
    cachetools

[nosetests]
match=^test
where=template
nocapture=1
cover-package=template
cover-erase=1

[options.entry_points]
wsgi_scripts =
    template-api = template.api.app:build_wsgi_app

oslo.config.opts =
    template.common.opts = template.opts:list_opts

console_scripts =
    template-processor = template.cli.processor:process

template.drivers = 
    redis = template.provider.redis:RedisCli
    zk = template.provider.zk:ZookCli